Fix intro not showing up

--- a/src/pages/about/index.css
+++ b/src/pages/about/index.css
@@ -75,6 +75,7 @@
   @media (--up-small) {
     display: flex;
     flex-flow: row nowrap;
+    align-items: center;
   }
 }
 
